...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tadje.myapplication.ui.HolidayFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_container_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/employeeManager"
...
            app:layout_constraintStart_toEndOf="@+id/addHolidayButton"
            app:layout_constraintTop_toBottomOf="@+id/recyclerviewEmployee"
            app:layout_constraintVertical_bias="0.715" />


        <Button
            android:id="@+id/addEmployeeButton"
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
...
