...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/paleVioletRedLigth"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                tools:layout_editor_absoluteX="225dp"
                tools:layout_editor_absoluteY="0dp" />
...
